# civiccode

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-DOCS  MILESTONE_10_DONE.md  MILESTONE_11_DONE.md  MILESTONE_12_DONE.md  MILESTONE_13_DONE.md  MILESTONE_14_DONE.md  MILESTONE_1_DONE.md  MILESTONE_2_DONE.md  MILESTONE_3_DONE.md  MILESTONE_4_DONE.md  MILESTONE_5_DONE.md  MILESTONE_6_DONE.md  MILESTONE_7_DONE.md  MILESTONE_8_DONE.md  MILESTONE_9_DONE.md  PRODUCTION_DEPTH_SOURCE_PERSISTENCE_DONE.md  README.md  README.txt  SECURITY.md  SUPPORT.md  USER-MANUAL.md  USER-MANUAL.txt  docker-compose.yml  docker.env.example  pyproject.toml
.github/: pull_request_template.md
civiccode/: __init__.py  citation_contract.py  codifier_sync.py  import_connectors.py  main.py  mock_city_environment.py  models.py  operational_readiness.py  operational_state.py  ordinance_handoff.py  plain_language.py  public_discovery.py  public_exports.py  public_lookup.py  qa_harness.py  section_lifecycle.py  source_registry.py  staff_code.py  staff_imports.py  staff_sources.py  staff_sync.py  staff_workbench.py
docs/: IMPLEMENTATION_PLAN.md  MILESTONES.md  RECONCILIATION.md  browser-qa-civiccode-010-backup-restore-docs-cdp.json  browser-qa-civiccode-010-backup-restore-docs-summary.md  browser-qa-civiccode-011-discovery-cdp.json  browser-qa-civiccode-011-discovery-summary.md  browser-qa-civiccode-012-durable-discovery-cdp.json  browser-qa-civiccode-012-durable-discovery-summary.md  browser-qa-civiccode-013-section-persistence-cdp.json  browser-qa-civiccode-013-section-persistence-summary.md  browser-qa-civiccode-014-doc-truth-summary.md  browser-qa-civiccode-014-staff-summary-persistence-cdp.json  browser-qa-civiccode-014-staff-summary-persistence-summary.md  browser-qa-civiccode-015-handoff-persistence-cdp.json  browser-qa-civiccode-015-handoff-persistence-summary.md  browser-qa-civiccode-016-import-job-persistence-cdp.json  browser-qa-civiccode-016-import-job-persistence-summary.md  browser-qa-civiccode-016-mock-city-summary.md  browser-qa-civiccode-017-codifier-sync-persistence-cdp.json  browser-qa-civiccode-017-codifier-sync-persistence-summary.md  browser-qa-civiccode-017-codifier-sync-summary.md  browser-qa-civiccode-018-operational-state-cdp.json  browser-qa-civiccode-018-operational-state-summary.md  browser-qa-civiccode-018-release-provenance-cdp.json  browser-qa-civiccode-018-release-provenance-summary.md  browser-qa-civiccode-018-suite-sync-cdp.json  browser-qa-civiccode-018-suite-sync-summary.md  browser-qa-civiccode-019-docker-demo-cdp.json  browser-qa-civiccode-019-docker-demo-summary.md  browser-qa-civiccode-019-sigstore-provenance-cdp.json  browser-qa-civiccode-019-sigstore-provenance-summary.md  browser-qa-civiccode-release-recovery-summary.md  browser-qa-civiccode-v0.1.1-alignment-summary.md  browser-qa-civiccode-v0.1.2-alignment-summary.md  browser-qa-co4-tier1-ledger-summary.md  browser-qa-production-depth-source-persistence-summary.md  browser-qa-staff-code-summary.md  browser-qa-staff-sources-summary.md  github-discussions-seed.md  (+2 more)
scripts/: browser-staff-surfaces-qa.cjs  check-civiccore-placeholder-imports.py  check-tier1-ledger.py  check_docker_backup_restore_rehearsal.py  docker-demo-smoke.sh  run_mock_city_environment_suite.py  start_docker_backup_restore_rehearsal.ps1  start_docker_backup_restore_rehearsal.sh  verify-docs.sh  verify-release-provenance.py  verify-release.sh
tests/: test_co4_tier1_retrofit_ledger.py  test_codifier_sync_foundation.py  test_docker_backup_restore_rehearsal_helper.py  test_docker_demo_runtime.py  test_milestone_10_civicclerk_handoff.py  test_milestone_11_public_lookup_surface.py  test_milestone_12_import_connector_hardening.py  test_milestone_13_accessibility_export_hardening.py  test_milestone_1_runtime_foundation.py  test_milestone_2_schema_and_migrations.py  test_milestone_3_source_registry.py  test_milestone_4_section_version_lifecycle.py  test_milestone_5_search_permalinks.py  test_milestone_6_citation_contract.py  test_milestone_7_citation_grounded_qa.py  (+12 more)
(+43 files in other folders)
