[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "civiccode"
version = "0.1.0.dev0"
description = "CivicCode runtime foundation for municipal code and ordinance access."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "CivicSuite contributors" }
]
dependencies = [
  "civiccore==0.2.0",
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["civiccode"]

[tool.hatch.build.targets.sdist]
include = [
  "civiccode",
  "scripts",
  "tests",
  "README.md",
  "CHANGELOG.md",
  "USER-MANUAL.md",
  "LICENSE-CODE",
  "LICENSE-DOCS",
]

[tool.ruff]
target-version = "py311"
line-length = 100
