[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "civiccode"
version = "0.1.4"
description = "CivicCode runtime foundation for municipal code and ordinance access."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "CivicSuite contributors" }
]
dependencies = [
  "civiccore @ https://github.com/CivicSuite/civiccore/releases/download/v0.19.0/civiccore-0.19.0-py3-none-any.whl",
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "psycopg2-binary>=2.9.0,<3.0.0",
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["civiccode"]
force-include = { "civiccode/migrations/alembic.ini" = "civiccode/migrations/alembic.ini" }

[tool.hatch.build.targets.sdist]
include = [
  "civiccode",
  "civiccode/migrations/alembic.ini",
  "scripts",
  "tests",
  "README.md",
  "CHANGELOG.md",
  "USER-MANUAL.md",
  "LICENSE-CODE",
  "LICENSE-DOCS",
]

[tool.ruff]
target-version = "py311"
line-length = 100
