[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "civiccode"
version = "1.0.0"
description = "CivicCode runtime foundation for municipal code and ordinance access."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "CivicSuite contributors" }
]
dependencies = [
  "civiccore @ https://github.com/CivicSuite/civiccore/releases/download/v1.0/civiccore-1.0.0-py3-none-any.whl",
  "alembic>=1.13.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "psycopg2-binary>=2.9.0,<3.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["civiccode"]
force-include = { "civiccode/migrations/alembic.ini" = "civiccode/migrations/alembic.ini" }

[tool.hatch.build.targets.sdist]
include = [
  "civiccode",
  "civiccode/migrations/alembic.ini",
  "scripts",
  "tests",
  "Dockerfile",
  "docker-compose.yml",
  "docker.env.example",
  ".dockerignore",
  ".gitignore",
  "README.md",
  "CHANGELOG.md",
  "CONTRIBUTING.md",
  "SECURITY.md",
  "SUPPORT.md",
  "docs/index.html",
  "LICENSE",
  "USER-MANUAL.md",
  "LICENSE-CODE",
  "LICENSE-DOCS",
]
exclude = [
  ".tmp-*",
  ".tmp-*/*",
  "**/.tmp-*",
  "**/.tmp-*/*",
  ".pytest_cache",
  ".pytest_cache/*",
  "**/__pycache__",
  "**/__pycache__/*",
]

[tool.ruff]
target-version = "py311"
line-length = 100
